--- a/css/style.css
+++ b/css/style.css
@@ -360,11 +360,11 @@ body.dark-theme {
 }
 
 /* ------------Project--------------- */
-.featured__container {
+.projects__container {
   row-gap: 2.5rem;
 }
 
-.featured__card {
+.projects__card {
   position: relative;
   text-align: center;
   background-color: var(--container-color);
@@ -374,35 +374,35 @@ body.dark-theme {
   border-radius: 10px;
 }
 
-.featured__title {
+.projects__title {
   font-size: var(--h2-font-size);
   font-weight: var(--font-bold);
   
 }
 
-.featured__title {
+.projects__title {
   text-transform: uppercase;
   margin-bottom: var(--mb-0-75);
 }
 
-.featured__button {
+.projects__button {
   font-size: var(--small-font-size);
   transform: translateY(1rem);
   opacity: 0;
 }
 
-.featured__card:hover {
+.projects__card:hover {
   box-shadow: 0 12px 32px hsla(0, 0%, 20%, .1);
   padding: 2rem 0 3rem 0;
   background-color: var(--first-color);
 }
 
-.featured__card:hover .featured__button {
+.projects__card:hover .projects__button {
   transform: translateY(0);
   opacity: 1;
 }
 
-.featured__card:hover {
+.projects__card:hover {
   margin-bottom: var(--mb-1-5);
 }
 
@@ -479,55 +479,6 @@ body.dark-theme {
   color: #FFF;
 }
 
-/* -----------Footer-------------- */
-.footer__container {
-  row-gap: 2rem;
-  border-bottom: 1px solid var(--border-color);
-  padding-bottom: 3rem;
-}
-
-.footer__title {
-  font-size: var(--h1-font-size);
-  margin-bottom: var(--mb-1-5);
-  font-family: var(--title-font);
-}
-
-.footer__list, 
-.footer__links {
-  display: flex;
-  flex-direction: column;
-  row-gap: .75rem;
-}
-
-.footer__link {
-  color: var(--text-color);
-}
-
-.footer__link:hover {
-  color: var(--title-color);
-}
-
-.footer__social {
-  display: flex;
-  column-gap: 1rem;
-}
-
-.footer__social-link {
-  font-size: 1.25rem;
-  color: var(--text-color);
-}
-
-.footer__social-link:hover {
-  color: var(--title-color);
-}
-
-.footer__copy {
-  display: block;
-  margin: 3.5rem 0 1rem 0;
-  text-align: center;
-  font-size: var(--smaller-font-size);
-  color: var(--text-color);
-}
 
 /* -----------------roles------------------- */
 .roles{
@@ -592,6 +543,59 @@ body.dark-theme {
     margin: 10px;
 }
 
+
+/* -----------Footer-------------- */
+.footer__container {
+  row-gap: 2rem;
+  border-bottom: 1px solid var(--border-color);
+  padding-bottom: 3rem;
+}
+
+.footer__title {
+  font-size: var(--h1-font-size);
+  margin-bottom: var(--mb-1-5);
+  font-family: var(--title-font);
+}
+
+.footer__list, 
+.footer__links {
+  display: flex;
+  flex-direction: column;
+  row-gap: .75rem;
+}
+
+.footer__link {
+  color: var(--text-color);
+}
+
+.footer__link:hover {
+  color: var(--title-color);
+}
+
+.footer__social {
+  display: flex;
+  column-gap: 1rem;
+}
+
+.footer__social-link {
+  font-size: 1.25rem;
+  color: var(--text-color);
+}
+
+.footer__social-link:hover {
+  color: var(--title-color);
+}
+
+.footer__copy {
+  display: block;
+  margin: 3.5rem 0 1rem 0;
+  text-align: center;
+  font-size: var(--smaller-font-size);
+  color: var(--text-color);
+}
+
+
+
 /* --------------Scroll-Up-------------- */
 .scrollup {
   position: fixed;
@@ -648,14 +652,11 @@ body.dark-theme {
   }
 
   .story__square,
-  .story__img,
-  .testimonial__square,
-  .testimonial__img {
+  .story__img {
     width: 180px;
   }
 
-  .story__square,
-  .testimonial__square {
+  .story__square {
     height: 180px;
   }
 
@@ -671,7 +672,7 @@ body.dark-theme {
     width: 340px;
   }
 
-  .featured__container {
+  .projects__container {
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     align-items: flex-start;
@@ -686,11 +687,6 @@ body.dark-theme {
 @media screen and (min-width: 767px) {
   .section {
     padding: 8rem 0 1rem;
-  }
-
-  .cart {
-    width: 420px;
-    box-shadow: -2px 0 4px hsla(0, 0%, 15%, .1);
   }
 
   .nav {
@@ -731,10 +727,8 @@ body.dark-theme {
     column-gap: 2rem;
   }
 
-  .featured__title,
-  .featured__price,
-  .new__title,
-  .new__price {
+  .projects__title,
+  .projects__price {
     font-size: var(--normal-font-size);
   }
 
@@ -763,18 +757,6 @@ body.dark-theme {
   }
   .skills__img {
     height: 155px;
-  }
-
-  .newsletter__bg {
-    text-align: initial;
-    column-gap: 2rem;
-    padding: 4.5rem;
-  }
-  .newsletter__subscribe {
-    flex-direction: row;
-  }
-  .newsletter__input {
-    width: 100%;
   }
 
   .footer__container {
@@ -808,36 +790,29 @@ body.dark-theme {
     padding: 0 0 8rem 6rem;
   }
 
-  .featured__container {
+  .projects__container {
     grid-template-columns: repeat(3, 312px);
     padding-top: 2rem;
   }
   
-  .story__container,
-  .testimonial__container {
+  .story__container {
     column-gap: 8rem;
   }
 
   .story__square,
-  .story__img,
-  .testimonial__square,
-  .testimonial__img {
+  .story__img {
     width: 450px;
   }
 
-  .story__square,
-  .testimonial__square {
+  .story__square {
     height: 450px;
   }
 
-  .skills__container,
-  .new__container {
+  .skills__container {
     padding-top: 2rem;
   }
 
-  .testimonial__container {
-    padding-bottom: 4rem;
-  }
+  
 }
 
 /* For large devices */
@@ -847,8 +822,7 @@ body.dark-theme {
     margin-right: auto;
   }
   
-  .story__container,
-  .testimonial__container {
+  .story__container {
     column-gap: 13rem;
   }
 
@@ -858,11 +832,6 @@ body.dark-theme {
   .story__img {
     left: 5rem;
     top: -5rem;
-  }
-
-  .testimonial__img {
-    right: 5rem;
-    top: 5rem;
   }
 
   .scrollup {
