--- a/css/style.css
+++ b/css/style.css
@@ -307,8 +307,8 @@ body.dark-theme {
 
 .home__social {
   position: absolute;
-  /* top: 35%;
-  left: -5rem; */
+  top: 35%;
+  left: -5rem;
   transform: rotate(-90deg);
   display: flex;
   /* column-gap: 1rem; */
