--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,7 @@ body.dark-theme {
   transform: rotate(-90deg);
   display: flex;
   column-gap: 1rem;
+  margin-left: 65rem;
 }
 
 .home__social-link {
@@ -339,6 +340,7 @@ body.dark-theme {
 
 .home__description {
   margin-bottom: var(--mb-1-5);
+  margin-right: 2rem;
 }
 
 .button {
