--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,10 @@ body.dark-theme {
 }
 
 /* ------------Project--------------- */
+a{
+  text-decoration: none;
+  color: var(--text-color);
+}
 
 .projects__container {
   row-gap: 2.5rem;
