--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ body.dark-theme {
 }
 
 .home__social-link {
-  font-size: var(--normal-font-size);
+  font-size: var(--h3-font-size);
   color: var(--text-color-light);
   transition: .3s;
   transform: rotate(90deg);
